--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,9 @@
 .navbar {
     background-color: #333;
     overflow: hidden;
+    position: sticky;
+    top: 0px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .navbar a {
@@ -20,4 +23,26 @@
 .navbar a.active {
     background-color: #868686;
     color: white;
+}
+
+.container-text {
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+.title {
+    font-size: 35px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
+
+.subtitle {
+    font-size: 27.5px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
+
+.text {
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
 }
