--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,48 +1,79 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .navbar {
-    background-color: #333;
-    overflow: hidden;
-    position: sticky;
-    top: 0px;
-    font-family: 'Roboto', sans-serif;
+  background-color: #333;
+  overflow: hidden;
+  position: sticky;
+  top: 0px;
+  font-family: "Roboto", sans-serif;
 }
 
 .navbar a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 .navbar a:hover {
-    background-color: #ddd;
-    color: black;
+  background-color: #ddd;
+  color: black;
 }
 
 .navbar a.active {
-    background-color: #868686;
-    color: white;
+  background-color: #868686;
+  color: white;
 }
 
 .container-text {
-    padding-left: 15%;
-    padding-right: 15%;
+  padding: 0 20%;
 }
 
 .title {
-    font-size: 35px;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
+  font-size: 35px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  margin: 20px 0;
 }
 
 .subtitle {
-    font-size: 27.5px;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
+  font-size: 27.5px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
 }
 
 .text {
-    font-size: 20px;
-    font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+}
+
+.section-title {
+  font-size: 30px;
+  font-family: "Roboto", sans-serif;
+  margin: 50px 0 20px 0;
+  text-decoration: underline;
+}
+
+.img-container {
+  width: 100%;
+  text-align: center;
+  margin: 30px 0;
+}
+
+.img-container-flex {
+  display: flex;
+  justify-content: space-around;
+  margin: 30px 0;
+  flex-wrap: wrap;
+}
+
+img {
+  width: 350px;
+  height: 650px;
 }
