--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,23 +26,33 @@
 }
 
 .container-text {
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .title {
-    font-size: 35px;
+    font-size: 40px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
 
 .subtitle {
-    font-size: 27.5px;
+    font-size: 35px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
 
+.section {
+    font-size: 27.5px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.subsection {
+    font-size: 22.5px;
+    font-family: 'Roboto', sans-serif;
+}
+
 .text {
-    font-size: 20px;
+    font-size: 17.5px;
     font-family: 'Roboto', sans-serif;
 }
